# gri_sense

./: .gitignore  README.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
firmware/main/actuators/: WaterPump.cpp  WaterPump.hpp
firmware/main/config/: AppConfig.hpp
firmware/main/irrigation/: IrrigationController.cpp  IrrigationController.hpp
firmware/main/mqtt/: MqttPublisher.cpp  MqttPublisher.hpp
firmware/main/sensors/: AgriTelemetry.hpp  AnalogPhSensor.cpp  AnalogPhSensor.hpp  Bh1750LightSensor.cpp  Bh1750LightSensor.hpp  CapacitiveSoilMoisture.cpp  CapacitiveSoilMoisture.hpp  Dht22TempHumidity.cpp  Dht22TempHumidity.hpp  ILightSensor.hpp  IPhSensor.hpp  ISoilMoistureSensor.hpp  ITempHumiditySensor.hpp  SensorBoard.cpp  SensorBoard.hpp
firmware/main/telemetry/: TelemetryJson.cpp  TelemetryJson.hpp
firmware/main/wifi/: WifiStation.cpp  WifiStation.hpp
qt_dashboard/: .gitignore  CMakeLists.txt  build.bat  run.bat
qt_dashboard/src/: main.cpp
qt_dashboard/src/config/: AppConfig.hpp
qt_dashboard/src/core/: TelemetryData.hpp  TelemetryParser.cpp  TelemetryParser.hpp
qt_dashboard/src/model/: TelemetryModel.cpp  TelemetryModel.hpp
qt_dashboard/src/mqtt/: MqttSubscriber.cpp  MqttSubscriber.hpp
qt_dashboard/src/ui/: MainWindow.cpp  MainWindow.hpp  SensorTile.cpp  SensorTile.hpp
